--- a/src/components/LatestBlogs/LatestBlogStyles.css
+++ b/src/components/LatestBlogs/LatestBlogStyles.css
@@ -43,6 +43,9 @@
   font-size: 30px;
   margin-top: 30px;
 }
+.each-category:hover{
+  cursor: pointer;
+}
 .blogs-section {
   display: flex;
   flex-wrap: wrap;
