Social Media Links are added with redirection

--- a/src/components/About/AboutStyles.css
+++ b/src/components/About/AboutStyles.css
@@ -57,6 +57,9 @@
   .socialMediaLinks{
     padding-top: 10px;
   }
+  .SocialMediaLinksForMobile{
+    display: none;
+}
   @media (max-width: 768px) {
     .container1{
         height: auto;
