--- a/src/components/Footer/FooterStyles.css
+++ b/src/components/Footer/FooterStyles.css
@@ -59,6 +59,9 @@
     color: #DCDE9F;
     font-size: 20px
 }
+.SocialMediaLinksForMobile{
+    display: none;
+}
 @media only screen and (max-width: 767px) {
     .footer{
         background: #183114;
@@ -77,6 +80,16 @@
     }
     .flex-row{
         margin-top: 10px;
+    }
+    .social-media-links{
+        margin-top: 40px;
+        margin-bottom: 40px;
+        display: flex;
+        flex-direction: row;
+        gap: 10px;
+        justify-content: center;
+        
+    
     }
 
     .txt {
@@ -131,18 +144,17 @@
         margin-top: 30px;
         gap: 10px;
     }
-    .social-media-links{
-        margin-left: 0px;
-    }
+   
     .info-p{
         font-size: 18px;
     }
-    .social-media-links{
-        margin-top: 20px;
-        margin-bottom: 20px;
-        
-    
+   
+    .SocialMediaLinks{
+        display: none;
     }
+    .SocialMediaLinksForMobile{
+        display: flex;
+    }    
 }
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
     .footer{
