Fixed social media links in contact form

--- a/src/components/Contact/ContactStyles.css
+++ b/src/components/Contact/ContactStyles.css
@@ -53,7 +53,9 @@
   padding-left: 50px;
 }
 .container{
-  padding-left: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   padding-top: 20px;
 }
 .form-container{
