--- a/src/components/Header/HeaderStyles.css
+++ b/src/components/Header/HeaderStyles.css
@@ -1,91 +1,110 @@
-
+/* Add this to your CSS file */
 .header {
     padding-left: 65px;
     padding-right: 65px;
     display: flex;
-    justify-content:space-between;
+    justify-content: space-between;
     align-items: center;
     padding-top: 3rem;
     padding-bottom: 3rem;
-    position: fixed; 
+    position: fixed;
     width: 100vw;
     height: 60px;
     z-index: 10;
     background: linear-gradient(90deg, #183114 0%, #446129 100%);
     backdrop-filter: blur(10px);
-}
-.dive-into-skills-heading{
+  }
+  
+  .dive-into-skills-heading {
     font-size: 36px;
-    font-weight: 700; 
-    color: #FCEE21;
-}
-.header-bg{
+    font-weight: 700;
+    color: #fcee21;
+  }
+  
+  .header-bg {
     box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.6);
     transition: 0.2s;
-}
-.search-bar-comp{
+  }
+  
+  .search-bar-comp {
     margin-bottom: 20px;
-}
-.nav-menu {
+  }
+  
+  .nav-menu {
     display: flex;
     justify-content: center;
     align-items: center;
-}
-
-.nav-menu li {
-    padding-left: 2rem;
-}
-.nav-item {
-    font-size: 30px;
-    color: white;
-    cursor: pointer;
-    transition: color 0.3s;
   }
-  .nav-item:hover {
-    color: #FCEE21
-}
-.hamsburger{
+  
+  .nav-menu a {
+    padding-left: 2rem;
+    text-decoration: none;
+  }
+  
+  .nav-item {
+    font-size: 30px;
+    cursor: pointer;
+  }
+
+  .active {
+    color: #fcee21; 
+  }
+  .inactive {
+    color: white;
+  }
+  
+  .hamsburger {
     display: none;
-}
-@media screen and (max-width: 1024px) {
-
-    .dive-into-skills-heading{
-        display: none;
+  }
+  
+  @media screen and (max-width: 1024px) {
+    .dive-into-skills-heading {
+      display: none;
     }
+  
     .header {
-        padding-top: 2rem;
-        padding-bottom: 2rem;
-        padding-left: 10px;
-        padding-right: 10px;
-        justify-content:space-between
+      padding-top: 2rem;
+      padding-bottom: 2rem;
+      padding-left: 10px;
+      padding-right: 10px;
+      justify-content: space-between;
     }
-    .search-bar-comp{
-        margin-left: 0px;
+  
+    .search-bar-comp {
+      margin-left: 0px;
     }
-
+  
     .nav-menu {
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        width: 100%;
-        height: 100vh;
-        background: rgba(0, 0, 0, 0.9);
-        position: absolute;
-        top: 0;
-        left: -100%;
-        z-index: -3;
-        transition: 0.3s;
-
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      width: 100%;
+      height: 100vh;
+      background: rgba(0, 0, 0, 0.9);
+      position: absolute;
+      top: 0;
+      left: -100%;
+      z-index: -3;
+      transition: 0.3s;
     }
-    .nav-menu.active{
-        left: 0%;
+  
+    .nav-menu.active {
+      left: 0%;
     }
-    .nav-menu li{
-        padding:1rem 0;
-        font-size: 28px;
+  
+    .nav-menu a {
+      padding: 1rem 0;
+      font-size: 28px;
+      text-decoration: none;
+      color: white;
     }
-
-    .hamsburger{
-        display: initial;
+  
+    .nav-menu a.active {
+      color: #fcee21; /* Set the color for the active link (yellow) */
     }
-}
+  
+    .hamsburger {
+      display: initial;
+    }
+  }
+  
