--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto';
 }
 
 li {
