--- a/src/components/About/AboutStyles.css
+++ b/src/components/About/AboutStyles.css
@@ -60,7 +60,27 @@
   .SocialMediaLinksForMobile{
     display: none;
 }
+.SocialMediaLinksForAbout{
+
+    margin-top: 40px;
+    margin-bottom: 40px;
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+    justify-content: center;
+
+}
   @media (max-width: 768px) {
+    .SocialMediaLinksForAbout{
+
+      margin-top: 40px;
+      margin-bottom: 40px;
+      display: flex;
+      flex-direction: row;
+      gap: 10px;
+      justify-content: center;
+  
+  }
     .container1{
         height: auto;
         padding-left: 40px;
