--- a/src/components/Contact/ContactStyles.css
+++ b/src/components/Contact/ContactStyles.css
@@ -85,6 +85,8 @@ textarea {
   height: 50px;
   width: 90%;
   font-size: 1.5em;
+  -webkit-text-fill-color: #FCEE21;
+  background-clip: text;
 }
 
 .textarea {
