--- a/src/components/Header/HeaderStyles.css
+++ b/src/components/Header/HeaderStyles.css
@@ -56,7 +56,13 @@
   .hamsburger {
     display: none;
   }
-  
+  @media screen and (min-width: 820px) and (max-width: 900px) {
+    .hamsburger {
+      display: initial;
+      padding-right: 25px;
+     
+    }
+  }
   @media screen and (max-width: 1024px) {
     .dive-into-skills-heading {
       display: none;
@@ -65,8 +71,8 @@
     .header {
       padding-top: 2rem;
       padding-bottom: 2rem;
-      padding-left: 10px;
-      padding-right: 10px;
+      padding-left: 20px;
+      padding-right: 20px;
       justify-content: space-between;
     }
   
@@ -105,6 +111,7 @@
   
     .hamsburger {
       display: initial;
+     
     }
   }
   
