Fixed responsiveness bugs

--- a/src/components/Contact/ContactStyles.css
+++ b/src/components/Contact/ContactStyles.css
@@ -50,7 +50,7 @@
   font-size: 3.2em;
   font-weight: bolder;
   padding-top: 80px;
-  padding-left: 50px;
+  padding-left: 70px;
 }
 .container{
   display: flex;
@@ -59,7 +59,10 @@
   padding-top: 20px;
 }
 .form-container{
-  width: 90%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 form {
   display: flex;
@@ -145,7 +148,7 @@ textarea::placeholder {
 .SocialMediaLinksForMobileForContact{
   display: none;
 }
-@media (max-width: 768px) {
+@media (max-width: 1024px) {
   .SocialMediaLinksForContact{
     display: none;
   }
@@ -165,6 +168,12 @@ textarea::placeholder {
     justify-content: center;
     width: 100%;
     background: hsl(91, 41%, 27%);
+    height: 780px;
+  
+  }
+  .right-section-text{
+    padding-left: 0px;
+    text-align: center;
   }
   .address-box {
     padding-top: 50px;
